# basic_feat_tempelate

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  README_Docker.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: conda_installation.yml  issue_comment.yml  page_deploy.yml  pre-commit.yml  schedule.yml  test_push.yml
MLops/: convert_py_nb.py
autoapi/MLops/convert_py_nb/: index.html
autoapi/src/example_scripts/01_demo/: index.html
autoapi/src/example_scripts/02_demo/: index.html
autoapi/src/math_ops/: index.html
autoapi/src/math_ops/basic_math_ops/: index.html
autoapi/src/math_ops/utils/: index.html
autoapi/summary/: index.html
autoapi/tests/: index.html
autoapi/tests/math_ops_test/: index.html
code_documentation/: index.html
docs/: code_documentation.md  index.md
docs/examples/: 01_demo.ipynb  02_demo.ipynb  index.md
examples/: index.html
examples/01_demo/: index.html
examples/02_demo/: index.html
search/: search_index.json
src/example_scripts/: 01_demo.py  02_demo.py
src/math_ops/: basic_math_ops.py  utils.py
tests/: math_ops_test.py
