[tool.poetry]
name = "math-ops"
version = "0.1.0"
description = ""
authors = ["Pawan Goyal <goyalp@mpi-magdeburg.mpg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
pre-commit = "^3.8.0"
black = "^24.8.0"
ruff = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isor,
    "I",
    # pydocstyle
    "D",
]
ignore = ["E501","D101"]
exclude = [
    "test_*.py",   # Exclude files that start with test_
    "tests/*.py",  # Exclude files in a tests/ directory
    "**/__init__.py" # Exclude init files
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
preview = true

[tool.mypy]
disallow_incomplete_defs = true